--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-uproot
 numpy>=1.13.1
-awkward>=0.12.0,<1.0
-uproot-methods>=0.7.0
+awkward==1.3.0
+uproot==4.0.9
 cachetools
 pkgconfig
 lz4
 zstandard
-backports.lzma;python_version<"3.3"
 pandas
 requests
 matplotlib
